# 839ad0a86347fe9f6b8d16123d098287

./: Cargo.toml  README.md
src/: debug_privilege.rs  main.rs  self_destroy.rs  template.rs  virustotal.rs
src/detection/: mod.rs
src/detection/debugger/: mod.rs
src/detection/debugger/debug_action/: hide_from_debugger.rs  mod.rs
src/detection/debugger/debug_detection/: check_remote_debugger_present.rs  debug_registers.rs  is_debugger_present.rs  mod.rs  nt_query_information_process_debug_flags.rs  nt_query_information_process_debug_object.rs  nt_query_information_process_debug_port.rs  peb_heap_flags.rs  peb_is_debugger_present.rs  peb_nt_global_flag.rs  readgsqword.rs
src/detection/sandbox/: mod.rs
src/detection/sandbox/sandbox_detection/: cursor.rs  input_time.rs  mod.rs  sbiedll.rs
src/detection/vm/: mod.rs
src/detection/vm/vm_detection/: cpuid_hw_bit.rs  cpuid_vendor.rs  mod.rs  rdtsc.rs  rdtsc_vmexit.rs
src/encryption/: aes.rs  chacha20.rs  mod.rs  rabbit.rs  rc4.rs  smart_xor.rs  xor.rs
src/obfuscation/: base32.rs  base45.rs  base58.rs  base62.rs  base64.rs  base85.rs  ipv4.rs  ipv6.rs  mac_addr.rs  mod.rs
src/utils/: arg_parser.rs  mod.rs
templates/CreateFiber/: Cargo.toml
templates/CreateFiber/src/: main.rs
templates/CreateProcess/: Cargo.toml
templates/CreateProcess/src/: main.rs
templates/ETWP/: Cargo.toml
templates/ETWP/src/: main.rs
templates/ModuleStomping/: Cargo.toml
templates/ModuleStomping/src/: main.rs
templates/Test/: Cargo.toml
templates/Test/src/: main.rs
templates/make_exec/: Cargo.toml
templates/make_exec/src/: main.rs
templates/ntAPC/: Cargo.toml
templates/ntAPC/src/: main.rs
templates/ntCRT/: Cargo.toml
templates/ntCRT/src/: main.rs
templates/sysCRT/: Cargo.toml
templates/sysCRT/src/: main.rs
templates/winCRT/: Cargo.toml
templates/winCRT/src/: main.rs
