[package]
name = "project"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true
lto = true

[dependencies]
virustotal = "2.0.0"
# parsing & formatting
owo-colors = { version = "4.0.0-rc.1", features = ["supports-colors"] }
anstyle = "1.0.4"
clap = { version = "4.3.21", features = ["derive", "unstable-styles"] }
# utils
regex = "1.10.2"
rand = "0.8.5"
path-clean = "1.0.1"
walkdir = "2.4.0"
strum_macros = "0.25.2"
strum = { version = "0.25.0", features = ["strum_macros"]}
rust-embed = { version = "8.0.0", features = ["compression"] }
# encryption
rc4 = "0.1.0"
chacha20poly1305 = "0.10.1"
rabbit = "0.4.1"
libaes = "0.7.0"
# obfuscation
base32 = "0.4.0"
base45 = "3.1.0"
bs58 = "0.5.0"
bs62 = "0.1.4"
base64 = "0.21.4"
base85 = "2.0.0"
# self-destroy
houdini = "2.0.0"
# debug privilege
tasklist = "0.2.13"

# system dependencies
sysinfo = "0.29.10"
kernel32-sys = "0.2.2"
wmi = "0.9.0"
winreg = "0.51.0"

[dependencies.winapi]
version = "0.3.0"
features = [
    "debugapi",
    "winuser",
    "sysinfoapi",
    "processthreadsapi"
]

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
]

[dependencies.windows-sys]
version = "0.36.1"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug"
]