[package]
name = "ntCRT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

{{DLL_FORMAT}}

[dependencies]

{{DEBUG_PRIVILEGE_DEPENDENCIES}}
{{ENCRYPTION_DEPENDENCIES}}
{{SELF-DESTROY_DEPENDENCIES}}
{{SANDBOX_DEPENDENCIES}}
{{ANTIDEBUG_DEPENDENCIES}}
{{DEOBFUSCATION_DEPENDENCIES}}

sysinfo = "0.28"
ntapi = { version = "0.4", features = ["impl-default"] }
winapi = { version = "0.3", features = ["ntdef", "ntstatus", "impl-default", "debugapi"] }

[dependencies.windows-sys]
version = "0.36.1"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug"
]

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = true